2012-01-31  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad2bin.c: fix comparison test for -f flag (#139).

2011-12-22  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_init.c; Only split arguments on pluses following spaces 
	in pj_init_plus() (#132)

2011-12-14  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_open_lib.c: make sure we check errno before logging messages (#131).

2011-12-13  Frank Warmerdam  <warmerdam@google.com>

	* src/PJ_healpix.c, etc: added healpix support contributed by
	Landcare in New Zealand. 

2011-11-22  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad_init.c, src/pj_gridinfo.c, src/nad2bin.c: Implement
	support for "ctable2" format grid shift files.

2011-11-18  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_mutex.c, src/pj_apply_vgridshift.c: avoid unused warnings.

2011-11-13  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad2bin.c: Modified to write NTv2 format files.

	* src/pj_init.c: avoid casting warning with old_locale.

2011-09-28  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Upgrade to EPSG 7.9.  Ideal datum selection rules also 
	changed a bit upstream.

2011-09-01  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>

        * Updated jniwrap/build.xml Ant script and README file.

2011-08-27  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>

        * Fixed some (but not all) memory leaks in org.proj4.Projections JNI bindings

        * Deprecated org.proj4.Projections JNI bindings

        * Added org.proj4.PJ JNI bindings in replacement of org.proj4.Projections

2011-08-27  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_pr_list.c, pj_sterrno.c: doc typo fixes from Martin.

2011-08-07  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datums.c: Updated Potsdam (DHDN) towgs84 parameters to match
	EPSG 7 parameter list for EPSG:4314 (#115).

	* src/pj_mutex.c: alter name of core_lock to avoid conflict on AIX (#55)

2011-07-23    <warmerdam@pobox.com>
