@@ -12,3 +12,14 @@ Test MD used where available
 79d58'00.000"W 36d58'00.000"N 0.0	79d57'59.128"W	36d58'0.501"N 0.000
 79d58'00.000"W 37d02'00.000"N 0.0	79d57'59.126"W	37d2'0.501"N 0.000
 79d58'00.000"W 36d58'00.000"N 0.0	79d57'59.128"W	36d58'0.501"N 0.000
+##############################################################
+Test that we use grid shift files even if we are right on the
+edge or even a wee bit outside (#141).
+-5.5 52.0	-5.501106465528	51.999890470284 0.000000000000
+-5.5000000000001 52.0000000000001	-5.501106465529	51.999890470284 0.000000000000
+-5.4999 51.9999	-5.501006458305	51.999790470257 0.000000000000
+-5.5001 52.0	-5.500100000000	52.000000000000 0.000000000000
+-5.5 52.0	-5.498893534472	52.000109529716 0.000000000000
+-5.5000000000001 52.0000000000001	-5.498893534472	52.000109529717 0.000000000000
+-5.4999 51.9999	-5.498793541695	52.000009529743 0.000000000000
+-5.5001 52.0	-5.500100000000	52.000000000000 0.000000000000
